fixed the quote with and aligned thor correctly

--- a/style.css
+++ b/style.css
@@ -124,27 +124,34 @@ img{
   }
 
 
-  .quote{
+  .quotediv{
     background-color: #E5E7EB;
+    padding: 150px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .quote{
     display: flex;
     flex-direction: column; 
     justify-content: center;
     align-items: center;
-    padding: 100px;
-}
+  }
 
 .quotep{
     font-size: 36px;
     font-style: italic;
-    margin-top: 50px; 
-    margin-bottom: 20px; 
-    width: 23em;
+    width: 25em;
+    margin: 0;
 }
 
 .thor{
-    margin-right: 20px; 
-    font-size: 18px; 
+    display: flex;
+    font-size: 24px; 
     font-weight: bolder;
+    justify-content: flex-end;
+    margin-top: 0;
+    margin-right: 15em;
 }
 
 
